# box_overview

./: .gitignore  BoxSpread.aux  BoxSpread.fdb_latexmk  BoxSpread.fls  BoxSpread.tex  BoxSpread.toc  README.md
live_box_spreads/: alpaca_client.py  alpaca_stream.py  boxspread.py  config.yaml  ingest.py  manage.sh  pyproject.toml  requirements.txt  tastytrade_client.py
live_box_spreads/dashboard/: app.py
live_box_spreads/src/live_box_spreads/: __init__.py  cli.py  config.py
live_box_spreads/src/live_box_spreads/core/: boxspread.py  opra.py  types.py
live_box_spreads/src/live_box_spreads/dashboard/: app.py  callbacks.py  layout.py  table.py
live_box_spreads/src/live_box_spreads/dashboard/assets/: dark-overrides.css
live_box_spreads/src/live_box_spreads/dashboard/charts/: skew.py  surfaces.py  term_structure.py
live_box_spreads/src/live_box_spreads/engine/: spread_builder.py  transforms.py
live_box_spreads/src/live_box_spreads/providers/: alpaca_rest.py  alpaca_stream.py  protocol.py
live_box_spreads/src/live_box_spreads/sources/: protocol.py  rest_source.py  snapshot_source.py  stream_source.py
live_box_spreads/tests/: conftest.py  test_alpaca_rest.py  test_alpaca_stream.py  test_boxspread.py  test_charts.py  test_config.py  test_dashboard_integration.py  test_dashboard_perf.py  test_opra.py  test_snapshot_source.py  test_spread_builder.py  test_stream_msgpack.py  test_stream_source.py  test_transforms.py
